infrastructure/cd/ui/capacitor/capacitor.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: capacitor
  namespace: flux-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${capacitor_fqdn}`)
      kind: Rule
      services:
        - kind: Service
          name: capacitor
          namespace: flux-system
          port: 9000
  tls:
    secretName: capacitor-cert
