infrastructure/cd/ui/capacitor/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: capacitor
  namespace: flux-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${capacitor_fqdn}`)
      kind: Rule
      services:
        - name: capacitor
  tls:
    secretName: capacitor-cert
